# terapascal

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  buildc.sh  demo-run-net.sh  dnd.bat  dnd.sh  rustfmt.toml  todo.md
backend_c/: Cargo.toml
backend_c/src/: ast.rs  c.rs  epilogue.h  lib.rs  prelude.h  rtti.rs
backend_cil/: Cargo.toml  Terapascal.CIL.sln  build.rs
backend_cil/rt/: ArrayManager.cs  Error.cs  FunctionInfo.cs  Object.cs  (+5 more)
common/: Cargo.toml
common/src/: aggregate_err.rs  build_log.rs  fs.rs  ident.rs  lib.rs  path.rs  reporting.rs  source_map.rs  span.rs  version.rs
common/src/source_map/: test.rs
demo_runner/: Cargo.toml
demo_runner/src/: build.rs  error.rs  main.rs  main2.rs  opts.rs  runner.rs  test_case.rs  test_output.rs  test_runner.rs  test_script.rs  util.rs
demo_runner/src/test_runner/: case.rs  test_process.rs
demos/: Calculator.tpas  HelloWorld.tpas
doc/: AnonymousFunctions.md  Generics.md  Interfaces.md
frontend/: Cargo.toml
frontend/src/: ast.rs  consts.rs  digest.rs  error.rs  import.rs  lib.rs  parse.rs  result.rs  token_tree.rs
frontend/src/ast/: block.rs  call.rs  case.rs  cast.rs  cond.rs  ctor.rs  expression.rs  function.rs  ident.rs  iter.rs  keyword.rs  match_block.rs  op.rs  operators.rs  package.rs  raise.rs  statement.rs  tag.rs  type_constraint.rs  type_list.rs  type_name.rs  type_name_pattern.rs  typedecl.rs  unit.rs  util.rs
frontend/src/ast/case/: test.rs
frontend/src/ast/cond/: test.rs
frontend/src/ast/ctor/: test.rs
frontend/src/ast/expression/: explicit_spec.rs  parse.rs  test.rs
frontend/src/ast/expression/parse/: operator.rs
frontend/src/ast/function/: test.rs
frontend/src/ast/statement/: assign.rs  exit.rs  local_binding.rs  member.rs  test.rs
frontend/src/ast/type_name/: function_name.rs  ty_path.rs  type_path.rs
frontend/src/ast/typedecl/: access.rs  enum_decl.rs  iface_decl.rs  set_decl.rs  struct_decl.rs  supers_clause.rs  variant_decl.rs
frontend/src/ast/typedecl/iface_decl/: test.rs
frontend/src/ast/typedecl/struct_decl/: member.rs  test.rs
frontend/src/ast/unit/: alias_decl.rs  const_decl.rs  decl_mod.rs  unit_decl.rs  use_decl.rs
frontend/src/codegen/: alias.rs  builder.rs  enum_type.rs  expr.rs  function.rs  library_builder.rs  metadata.rs  mod.rs  pattern.rs  set_flags.rs  stmt.rs  var_param.rs
frontend/src/codegen/builder/: ext.rs  scope.rs  test.rs
frontend/src/codegen/expr/: call.rs  cond.rs  ctor.rs  op.rs
frontend/src/codegen/library_builder/: build_functions.rs  build_types.rs  dyn_array.rs  function.rs  init.rs  rc_methods.rs  rtti.rs
frontend/src/codegen/metadata/: name_path.rs  path.rs  test.rs
frontend/src/codegen/metadata/ty/: function.rs  iface_def.rs  struct_def.rs  variant_def.rs
frontend/src/digest/: digest_builder.rs  digest_function.rs  digest_type.rs  error.rs
frontend/src/import/: builder.rs  error.rs  read_function.rs  read_tags.rs  read_type.rs
frontend/src/import/builder/: read_function.rs  read_tags.rs  read_type.rs
frontend/src/parse/: matcher.rs  result.rs  token_stream.rs
frontend/src/pp/: directive.rs  error.rs  mod.rs
frontend/src/token_tree/: lex.rs  test.rs
frontend/src/token_tree/lex/: test.rs
frontend/src/typ/: annotation.rs  ast.rs  context.rs  mod.rs  result.rs  test.rs  ty.rs
frontend/src/typ/annotation/: function.rs  invoke.rs  method.rs  overload.rs  symbol.rs  ufcs.rs
frontend/src/typ/ast/: block.rs  call.rs  case.rs  cast.rs  cond.rs  const_eval.rs  ctor.rs  expr.rs  function.rs  iter.rs  match_block.rs  op.rs  raise.rs  stmt.rs  typedecl.rs  unit.rs  where_clause.rs
frontend/src/typ/ast/call/: args.rs  overload.rs  test.rs
frontend/src/typ/ast/call/test/: util.rs
frontend/src/typ/ast/ctor/: test.rs
frontend/src/typ/ast/expr/: init.rs  literal.rs
frontend/src/typ/ast/function/: decl_mod.rs  test.rs
frontend/src/typ/ast/op/: test.rs  variant_case.rs
frontend/src/typ/ast/stmt/: assign.rs
frontend/src/typ/ast/typedecl/: test.rs
frontend/src/typ/ast/unit/: task.rs  unit_typedecl.rs
frontend/src/typ/context/: binding.rs  builtin.rs  completion.rs  decl.rs  def.rs  env.rs  generic.rs  member.rs  result.rs  scope.rs  test.rs  ufcs.rs
frontend/src/typ/context/scope/: path_ref.rs  scope_stack.rs  test.rs
frontend/src/typ/context/ufcs/: test.rs
frontend/src/typ/ty/: array.rs  boxed.rs  layout.rs  pattern.rs  primitive.rs  seq.rs  set.rs  sig.rs  specialize.rs  test.rs  ty_param.rs
interpreter/: Cargo.toml
ir/: Cargo.toml
ir/src/: builtin.rs  error.rs  formatter.rs  function.rs  instruction.rs  instruction_builder.rs  lib.rs  library.rs  metadata.rs  path.rs  rtti.rs  ty.rs  ty_decl.rs  type_decl.rs  typeinfo.rs  types.rs  val.rs
ir/src/dep_sort/: mod.rs
ir/src/function/: function_identity.rs  function_sig.rs
ir/src/instruction_builder/: dyn_array.rs  generic.rs  generic_builder.rs  invoker.rs  object.rs  scope.rs  util.rs
ir/src/metadata/: builder.rs  collection.rs  format.rs  ids.rs  source.rs  tags.rs  vars.rs
ir/src/metadata/builder/: functions.rs  rtti.rs  types.rs
ir/src/ty_decl/: interface.rs  struct.rs  tags.rs  variant.rs
ir/src/type_decl/: interface.rs  struct.rs  variant.rs
ir/src/types/: generic.rs
lib/: System.lib
src/: args.rs  clang.rs  compile_error.rs  dotnet.rs  error.rs  main.rs  reporting.rs  sources.rs
terapascal-net/: Cargo.toml  Terapascal.NET.sln
terapascal_ls/: Cargo.toml
terapascal_ls/src/: fs.rs  main.rs  project.rs  semantic_tokens.rs  util.rs  workspace.rs
terapascal_ls/src/project/: completion.rs  definition_map.rs
test_runner/: Cargo.toml
units/: System.Arrays.pas  System.Collections.pas  System.Collections.tpas  System.SortedDict.pas  System.pas  System.tpak  System.tpas
vm/: Cargo.toml
vm/src/: builtin.rs  dyn_value.rs  func.rs  heap.rs  lib.rs  marshal.rs  ptr.rs  result.rs  rtti_map.rs  stack.rs  test.rs
vm/src/diag/: mod.rs
vm/src/func/: ffi.rs
vm/src/marshal/: array.rs  error.rs  marshal_type.rs  native_type.rs  object.rs  struct_type.rs  type_def.rs  util.rs  variant_type.rs
vm/src/stack/: trace.rs
(+264 files in other folders)
