[package]
name = "terapascal"
version = "0.3.0"
authors = ["spriest487 <spriest487@googlemail.com>"]
edition = "2024"

[dependencies]
terapascal-common = { path = "common" }
terapascal-frontend = { path = "frontend" }
terapascal-vm = { path = "vm" }
terapascal-backend-c = { path = "backend_c" }
terapascal-ir = { path = "ir" }
terapascal-build = { path = "build" }

bincode = { version = "2.0.1", features = ["serde"] }
structopt = "0.3.26"
codespan-reporting = "0.12.0"

[workspace]
members = [
    "build",
    "common",
    "frontend",
    "ir",
    "terapascal_ls",
    "test_runner",
    "vm"
]

[features]
debug-server = ["terapascal-vm/debug_server"]

[profile.release]
debug = true
