[package]
name = "terapascal"
version = "0.3.0"
authors = ["spriest487 <spriest487@googlemail.com>"]
edition = "2024"

[dependencies]
terapascal-common = { path = "common" }
terapascal-frontend = { path = "frontend" }
terapascal-vm = { path = "vm" }
terapascal-backend-c = { path = "backend_c", optional = true }
terapascal-backend-cil = { path = "backend_cil", optional = true }
terapascal-ir = { path = "ir" }
terapascal-build = { path = "build" }
thiserror = "2.0.16"
structopt = "0.3.26"

[workspace]
members = [
    "build",
    "common",
    "frontend",
    "ir",
    "backend_cil",
    "backend_c",
    "terapascal_ls",
    "demo_runner",
    "vm",
]

[features]
debug-server = ["terapascal-vm/debug_server"]
backend-cil = ["dep:terapascal-backend-cil"]
backend-c = ["dep:terapascal-backend-c"]

[profile.release]
debug = true
