[package]
name = "terapascal-demo-runner"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "terapascal-demo-runner"
path = "src/main.rs"

[dependencies]
structopt = "0.3.25"
chrono = "0.4.41"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
regex = { version = "1.11.1", features = [] }
terapascal-common = { path = "../common" }
rayon = "1.12.0"
thiserror = "2.0.18"