[package]
name = "terapascal-frontend"
version = "0.1.0"
authors = ["spriest487 <spriest487@googlemail.com>"]
edition = "2024"

[dependencies]
terapascal-common = { path = "../common" }
terapascal-ir = { path = "../ir" }
bigdecimal = "0.4.8"
cast = "0.3.0"
derivative = "2.2.0"
linked-hash-map = "0.5.6"
regex = "1.11.1"
rayon = "1.10.0"
