[package]
name = "terapascal-ir"
version = "0.1.0"
edition = "2021"

[dependencies]
terapascal-common = { path = "../common" }
bigdecimal = "0.4.5"
linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
serde = { version = "1.0.210", features = ["derive"] }
topological-sort = "0.2.2"

[dev-dependencies]
terapascal-frontend = { path = "../frontend" }
