[package]
name = "terapascal-ir"
version = "0.1.0"
edition = "2024"

[dependencies]
terapascal-common = { path = "../common" }
bigdecimal = "0.4.8"
linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
serde = { version = "1.0.219", features = ["derive"] }
topological-sort = "0.2.2"
