[package]
name = "terapascal-vm"
version = "0.1.0"
authors = ["spriest487 <spriest487@googlemail.com>"]
edition = "2021"

[dependencies]
terapascal-ir = { path = "../ir" }
common = { path = "../common" }
libffi = "4.1.0"
dlopen = "0.1.8"
cast = "0.3.0"
smallvec = "1.8.0"
rouille = "3.6.2"
serde = { version = "1.0.217", features = ["derive"] }
rand = "0.9.0"
