[package]
name = "terapascal-vm"
version = "0.1.0"
authors = ["spriest487 <spriest487@googlemail.com>"]
edition = "2024"

[dependencies]
terapascal-ir = { path = "../ir" }
terapascal-common = { path = "../common" }
libffi = "4.1.0"
dlopen = "0.1.8"
cast = "0.3.0"
smallvec = "1.15.0"
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.9.0"

rouille = {  version = "3.6.2", optional = true }

[features]
debug_server = ["dep:rouille"]
